--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 HOST="localhost"
 PORT=3001
-MONGODB_URI="mongodb+srv://affan:affan@cluster0.bwphjz4.mongodb.net/?retryWrites=true&w=majority"
-DATABASE
+MONGO_URL=mongodb+srv://affan:affan@cluster0.bwphjz4.mongodb.net/?retryWrites=true&w=majority
+JWT_SECRET=abccddeaefjaeofj
+JWT_LIFETIME=30000
