--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-HOST="localhost"
-PORT=3001
-MONGO_URL=mongodb+srv://affan:affan@cluster0.bwphjz4.mongodb.net/?retryWrites=true&w=majority
-JWT_SECRET=abccddeaefjaeofj
-JWT_LIFETIME=30000
+NODE_ENV = production
+PORT = 5000
+MONGO_URI = mongodb+srv://affan:affan@cluster0.bwphjz4.mongodb.net/?retryWrites=true&w=majority
+JWT_SECRET = abc123
