--- a/package.json
+++ b/package.json
@@ -1,37 +1,29 @@
 {
-  "name": "10-e-commerce-api",
+  "name": "mern-tutorial",
   "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
+  "description": "Goalsetter app for youtube tutorial",
+  "main": "server.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+    "start": "node server.js",
+    "server": "nodemon server.js",
+    "client": "npm start --prefix frontend",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Affan Habib",
+  "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.4.5",
+    "colors": "^1.4.0",
     "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "express-async-errors": "^3.1.1",
-    "express-fileupload": "^1.2.1",
-    "express-mongo-sanitize": "^2.1.0",
-    "express-rate-limit": "^5.4.1",
-    "helmet": "^4.6.0",
-    "http-status-codes": "^2.1.4",
-    "joi": "^17.4.0",
+    "dotenv": "^15.0.0",
+    "express": "^4.17.2",
+    "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.8",
-    "morgan": "^1.10.0",
-    "validator": "^13.6.0",
-    "xss-clean": "^0.1.1"
+    "mongoose": "^6.1.9"
   },
   "devDependencies": {
-    "nodemon": "^2.0.9"
-  },
-  "engines": {
-    "node": "14.x"
+    "concurrently": "^7.0.0",
+    "nodemon": "^2.0.15"
   }
 }
