--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NODE_ENV = production
+NODE_ENV = developlment
 PORT = 5000
 MONGO_URI = mongodb+srv://affan:affan@cluster0.bwphjz4.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET = abc123
