--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mern-tutorial",
   "version": "1.0.0",
-  "description": "Goalsetter app for youtube tutorial",
+  "description": "add to cart",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
