--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "1.0.0",
   "description": "add to cart",
   "main": "server.js",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "start": "node server.js",
     "server": "nodemon server.js",
-    "client": "npm start --prefix frontend",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
+    "client": "npm start --prefix frontend"
   },
   "author": "Affan Habib",
   "license": "MIT",
