--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "add to cart",
   "main": "server.js",
+  "engines": {
+    "node": "14"
+  },
   "scripts": {
     "start": "node server.js",
     "server": "nodemon server.js",
