--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "add to cart",
   "main": "server.js",
   "engines": {
-    "node": "14"
+    "node": "14.x"
   },
   "scripts": {
     "start": "node server.js",
