--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "add to cart",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "server": "nodemon server.js",
-    "client": "npm start --prefix frontend"
+    "start": "node server.js"
   },
   "author": "Affan Habib",
   "license": "MIT",
