--- a/package.json
+++ b/package.json
@@ -3,11 +3,9 @@
   "version": "1.0.0",
   "description": "add to cart",
   "main": "server.js",
-  "engines": {
-    "node": "14.x"
-  },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "server": "nodemon server.js"
   },
   "author": "Affan Habib",
   "license": "MIT",
@@ -22,7 +20,6 @@
     "mongoose": "^6.1.9"
   },
   "devDependencies": {
-    "concurrently": "^7.0.0",
     "nodemon": "^2.0.15"
   }
 }
