--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ NODE_ENV=developlment
 PORT=5000
 MONGO_URI=mongodb+srv://affan:affan@cluster0.bwphjz4.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET=abc123
+CLOUDINARY_NAME=dhijllt3x
+CLOUDINARY_API_KEY=589955643289796
+CLOUDINARY_API_SECRET=Y7NhBkcN0mTDenQkvTqZuth1AgY
